WIP checkpoint: per-project settings, Rename cross-file fixes, dirty-editor checks
Key changes:
- Per-project settings registry (settingsForUri/settingsForProject); Eclipse plugin
  sends projects list in didChangeConfiguration; commands use projectId prefix
- Remove jmlWorkspaceRoots; use rootPaths (per-project) and workspaceFolderPaths (VSCode)
- Rename: fix cross-file scan (B.java), companion .jml scan, verifyReferenceStability
  using real URIs in freshCache; checkModifiedFilesAndGetCache passes individual files
  so IASTListener fires
- All file checks now route through runCheckContent (includes dirty editor snapshot);
  runCheckFile removed; null content = OpenJML reads file from disk
- ReferenceFinder: scan specsCompilationUnit companion; scanCU sets AST_JAVA_MODE
- Non-JML-nature files skipped in scheduleCheckNow/recheckUri when project registry set
- Extensive debug logging (still present; Rename and FoldingRange still need work)

Known failing tests (pre-existing): FoldingRangeTest.testJmlBlockWithProgramTextSplitsRegion,
testProgramTextAfterBlockCloseTerminatesFold — FoldingRange feature incomplete.
testDidOpenDiskFileTypeError may also be failing (test updated to send real content).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>